# TJR104_project_accidents

./: .env.example  .gitignore  README.md  e_Obs_station_info.py  pyproject.toml
learing_notes/: learning_notes.md
learning_notes/: 20260321_unittest.md  20260327_folium.md  20260327_redis.md  20260327_streamlit.md  learning_notes.md
src/: app.py  e_A1&A2_log_comparison_at-fault-driver_only.ipynb  e_Obs_station_info.py  e_Obs_station_weather_data.py  e_crawerling_func_weather_data.py  e_find_accidentday_weather_data.py  e_find_hist_accidentday_weather_data.py  l_AccidentsA1A2_y113.py  l_Obs_station_info.py  l_find_accidentday_weather_data.py  l_find_nearby_Obs_station.py  l_find_nearest_Obs_station.py  t_AccidentsA1A2_y113.py  t_AccidentsA1A2_y113_at_fault_driver.py  t_Obs_station_info.py  t_find_hist_accidentday_weather_data.py  t_find_nearby_Obs_station.py  t_find_nearest_Obs_station.py
src/task/: create_night_markets_tables.py  create_traffic_accident_table.py  create_traffic_accident_tables.py  e_crawling_nightmarket.py  e_crawling_traffic_accident.py  l_dim_accident_day.py  l_dim_accident_type.py  l_dim_lane_design.py  l_dim_road_design.py  l_fact_accident_env.py  l_fact_accident_human.py  l_fact_accident_main.py  l_fact_night_markets.py  t_dim_accident_day.py  t_dim_accident_type.py  t_dim_lane_design.py  t_dim_road_design.py  (+4 more)
test/: conftest.py
util/: create_accident_nearby_stn_table.py  create_hist_weather_data_table.py  create_weather_data_table_mysql.py  create_weather_obs_stn_table.py  print_column_names_in_diiferent_csv.py  print_column_names_schema.py
(+34 files in other folders)
