[project]
name = "taiwan-traffic-accidents"
version = "0.1.0"
description = ""
authors = [
    {name = "Jessie_lin",email = "lucky460721@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (==2.3.3)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymysql (==1.1.2)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
