[project]
name = "taiwan-traffic-accidents"
version = "0.1.0"
description = ""
authors = [
    {name = "Jessie_lin",email = "lucky460721@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (==2.3.3)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymysql (==1.1.2)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pytest (>=9.0.2,<10.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "timezonefinder (>=8.2.1,<9.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "redis (>=7.4.0,<8.0.0)",
    "plotly (>=6.6.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]